new characters for autonomies

--- a/localisation/english/countries_cosmetic_l_english.yml
+++ b/localisation/english/countries_cosmetic_l_english.yml
@@ -1921,5 +1921,14 @@
  PAP_vatican_neutrality_DEF:0 "the Vatican City State"
 
  TUR_ottoman_syria:0 "Ottoman Syria"
- TUR_ottoman_syria_DEF:0 "Ottoman Provinces in Syria under the command of Ahmed Cemâl Paşa"
+ TUR_ottoman_syria_DEF:0 "Ottoman Provinces in Syria Under the Command of Ahmed Cemâl Paşa"
  TUR_ottoman_syria_ADJ:0 "Ottoman"
+ TUR_ottoman_izmir:0 "Ottoman Smyrna"
+ TUR_ottoman_izmir_DEF:0 "Ottoman Governate of Smyrna"
+ TUR_ottoman_izmir_ADJ:0 "Ottoman"
+ TUR_ottoman_trabzon:0 "Ottoman Trebizond"
+ TUR_ottoman_trabzon_DEF:0 "Ottoman Governate of Trebizond"
+ TUR_ottoman_trabzon_ADJ:0 "Ottoman"
+ TUR_ottoman_diyarbakir:0 "Ottoman Diyarbekir"
+ TUR_ottoman_diyarbakir_DEF:0 "Ottoman Governate of Diyarbekir"
+ TUR_ottoman_diyarbakir_ADJ:0 "Ottoman"
