--- a/localisation/english/parties_l_english.yml
+++ b/localisation/english/parties_l_english.yml
@@ -1570,7 +1570,9 @@
  KUR_democratic_party:0 "CTK"
  KUR_democratic_party_long:0 "Cemîyeta Tealîya Kurdistanê"
  KUR_neutrality_party:0 "Berzincî Klik"
- 
+ KUR_kurdish_society_for_cooperation_and_progress:0 " Civaka Hevgirtin û Pêşverû ya Kurd"
+ KUR_kurdish_society_for_cooperation_and_progress_long:0 " Civaka Hevgirtin û Pêşverû ya Kurd"
+
  PHI_fascism_party:0 "AVR"
  PHI_fascism_party_long:0 "Asociación de los Veteranos de la Revolución"
  PHI_democratic_party:0 "NP"
@@ -1633,7 +1635,8 @@
  AIN_fascism_party:0 "Militarists"
  AIN_neutrality_party:0 "Independentists"
  
- PON_democratic_party:0 "Kòmma Pontìon"
+ PON_democratic_party:0 "KP"
+ PON_democratic_party_long:0 "Kòmma Pontìon"
  PON_neutrality_party:0 "Mitrópolis"
  PON_neutrality_party_long:0 "Mitrópolis Trapezoúntas"
  PON_fascism_party:0 "EE"
