--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -4410,44 +4410,27 @@ kis_news.143.a:0 "Will the revolution spread to Western Europe?"
  ottoman.113.t:0 "Senussi Order Rejects our Call"
  ottoman.113.d:0 "Though we're embroiled in war with the Italians in Trablusgarp, our call for help to the Senussi order has been rejected."
  ottoman.113.a:0 "Aren't they scared of Allah?"
+ TUR_ittihadist_autonomy_approved:0 "Modify §YSecond Constitutional Era§! by\n£stability_texticon  Stability: §G+1.00%§!\n\n"
+ TUR_ittihadist_autonomy_rejected:0 "Modify §YSecond Constitutional Era§! by\n£political_power_texticon  Political Power Gain: §G+1%§!\n£stability_texticon  Stability: §R-3.00%§!\n\n"
+ ottoman.115.t:0 "Mustafa Rahmi Bey Expands his Autonomy in [339.GetName]"
+ ottoman.115.d:0 "Mustafa Rahmi Bey, an İttihat ve Terakki member, has been increasing his autonomy from the government. While actively defying government orders, he started to expand his own domain and push his own actions without the approval of [347.GetName]. Since he's a Committee member, it is reasonable and even motivated for us to turn a blind eye on his actions. Choosing to tighten the grip on the governor however, will increase central control at a cost."
+ ottoman.115.a:0 "A dear Committee member would never do such a thing."
+ ottoman.115.b:0 "Perhaps Rahmi Bey was right, we better follow his orders."
+ ottoman.115.c:0 "No one can deny state authority."
+ TUR_ittihadist_autonomy_izmir:0 "(@TUR §YOttoman İzmir§!):\n   Becomes owner and controller of §Y[339.GetName]§!\n   §YOttoman Smyrna§! becomes §YAutonomous Vilayet§! of §Y[TUR.GetName]§!   Politics will change\n   §YİTF§! becomes the ruling party.\n   Public elections will not be held.\n   §YMustafa Rahmi Bey§!(@TUR) joins §YOttoman Governate of Smyrna§!\n   §YMustafa Rahmi Bey§! becomes leader for the authoritarian party.\n\n"
+ ottoman.116.t:0 "Cemal Azmi Bey Expands his Autonomy in [354.GetName]"
+ ottoman.116.d:0 "Cemal Azmi Bey, an İttihat ve Terakki member, has been increasing his autonomy from the government. While actively defying government orders, he started to expand his own domain and push his own actions without the approval of [347.GetName]. Since he's a Committee member, it is reasonable and even motivated for us to turn a blind eye on his actions. Choosing to tighten the grip on the governor however, will increase central control at a cost."
+ ottoman.116.a:0 "A dear Committee member would never do such a thing."
+ ottoman.116.b:0 "Perhaps Azmi Bey was right, we better follow his orders."
+ ottoman.116.c:0 "No one can deny state authority."
+ TUR_ittihadist_autonomy_trabzon:0 "(@TUR §YOttoman İzmir§!):\n   Becomes owner and controller of §Y[354.GetName]§!\n   §YOttoman Trebizond§! becomes §YAutonomous Vilayet§! of §Y[TUR.GetName]§!   Politics will change\n   §YİTF§! becomes the ruling party.\n   Public elections will not be held.\n   §YCemal Azmi Bey§!(@TUR) joins §YOttoman Governate of Trebizond§!\n   §YCemal Azmi Bey§! becomes leader for the authoritarian party.\n\n"
+ ottoman.117.t:0 "Mehmed Reşid Bey Expands his Autonomy in [350.GetName]"
+ ottoman.117.d:0 "Mehmed Reşid Bey, an İttihat ve Terakki member, has been increasing his autonomy from the government. While actively defying government orders, he started to expand his own domain and push his own actions without the approval of [347.GetName]. Since he's a Committee member, it is reasonable and even motivated for us to turn a blind eye on his actions. Choosing to tighten the grip on the governor however, will increase central control at a cost."
+ ottoman.117.a:0 "A dear Committee member would never do such a thing."
+ ottoman.117.b:0 "Perhaps Reşid Bey was right, we better follow his orders."
+ ottoman.117.c:0 "No one can deny state authority."
+ TUR_ittihadist_autonomy_diyarbakir:0 "(@TUR §YOttoman İzmir§!):\n   Becomes owner and controller of §Y[350.GetName]§!\n   Becomes owner and controller of §Y[829.GetName]§!\n   §YOttoman Diyarbekir§! becomes §YAutonomous Vilayet§! of §Y[TUR.GetName]§!   Politics will change\n   §YİTF§! becomes the ruling party.\n   Public elections will not be held.\n   §YMehmed Reşid Bey§!(@TUR) joins §YOttoman Governate of Diyarbekir§!\n   §YMehmed Reşid Bey§! becomes leader for the authoritarian party.\n\n"
 
- TUR_ottoman_armenian_minority_modify_attrition_negative_15:0 "Modify £ww1_flag_ARM §YArmenian Minority§! as: Division Attrition: §R+15.00%§!"
- TUR_ottoman_greek_minority_modify_attrition_negative_15:0 "Modify £ww1_game_rule_flag_GRE §YGreek Minority§! as: Division Attrition: §R+15.00%§!"
- TUR_ottoman_south_slavic_minority_modify_attrition_negative_15:0 "Modify £ww1_game_rule_flag_YUG §YSouth Slavic Minority§! as: Division Attrition: §R+15.00%§!"
- TUR_ottoman_georgian_minority_modify_attrition_negative_15:0 "Modify §YGeorgians Minority§! as: Division Attrition: §R+15.00%§!"
- TUR_ottoman_romanian_minority_modify_attrition_negative_15:0 "Modify £ww1_flag_ROM §YRomanian Minority§! as: Division Attrition: §R+15.00%§!"
- TUR_ottoman_assyrian_minority_modify_attrition_negative_15:0 "Modify §YAssyrian Minority§! as: Division Attrition: §R+15.00%§!"
- ottoman.111.t:0 "Unintended Consequences"
- ottoman.111.d:0 "Due to the recent attempt to hinder their influence, Christians started to lose their economical hegemony over the region. This resulted in the weakening of centuries old trade infrastructures and markets, and even caused unemployment."
- ottoman.111.a:0 "So far with national economy."
- ottoman.112.t:0 "Unintended Consequences"
- ottoman.112.d:0 "After confiscating all of the Christian properties in Anatolia, the centuries old trade infrastructure built by the Greeks inevitably fell with it. We no longer can benefit from the Christian trade in the region."
- ottoman.112.a:0 "At least we got what they had."
- ottoman.113.t:0 "Unintended Consequences"
- ottoman.113.d:0 "Turks that were promoted into Thrace administration started to seize Greek wealth and trade connections in the region. This resulted in the disruption of centuries old trade infrastruction in the region."
- ottoman.113.a:0 "It's better in Turkish hands."
- ottoman.114.t:0 "Unintended Consequences"
- ottoman.114.d:0 "Disruption of the multiethnic makeup Macedonian administration resulted in the inefficiency of the centuries old Christian trade infrastructure. This will have a bad impact on the local trade and development."
- ottoman.114.a:0 "They're just trying to make our jobs harder."
- ottoman.115.t:0 "Unintended Consequences"
- ottoman.115.d:0 "After the promotion of Muslims into the administration of Greece, they've failed to manage the trade infrastructure that has been present in the region for so long. Due to this, the trade in the region has broke down."
- ottoman.115.a:0 "Muslims are better merchants than Christians."
- ottoman.116.t:0 "Unintended Consequences"
- ottoman.116.d:0 "With the hand over of Christian lands to Muslims, Muslims have started to raid and pillage Christian villages and seize their properties. This has caused a mass unrest and major persecution of Christians in these states."
- ottoman.116.a:0 "They should've converted long ago."
- ottoman.117.t:0 "Power of Pan-Islamism"
- ottoman.117.d:0 "Western ideals such as nationalism and liberalism has brought our empire to the edge of collapse. For this matter, many groups have developed their own theories. İttihatists advocated for Ottoman nationalism in an effort to unite all the non-Turkish minorities under one identity. Liberals on the other hand argued for decentralization and further autonomy. Yet these policies will only lead to a faster demise of our empire.\nThere's one more theory, that proposes only Islamic unity will save our empire. With Abdulhamid II as the new Sutlan, he can use his Caliph title to unite the Muslim population under his banner."
- ottoman.117.a:0 "Survival of the empire can only be assured through Islamic unity."
- ottoman.117.b:0 "It's the 20th century for Allah's sake."
- TUR_unlock_islamist_branch:0 "New §Yfocuses§! will be unlocked.\n§RContinue Modernization Efforts path will become inaccessible.§!"
- ottoman.118.t:0 "Conservatives Wins Elections"
- ottoman.118.d:0 "With the recent elections, the newly reopened İttihat-ı Muhammedi Fırkası has won the elections. Standing as a conservative Islamist party, they intend to follow the footsteps of the constitution and turn the empire into a modern Muslim state under the democratic values.\nUnlike its past self, the party will follow a modernist and tolerant conservatie agenda under the leadership of Said-i Nursi. After the secularist rule of the İttihatists, this will be a sigh of relief for the conservative population. One can only hope for things to not go sour."
- ottoman.118.a:0 "Thats what the people wants."
- TUR_unlock_said_i_nursi_path:0 "New §Yfocuses§! will be unlocked."
- ottoman.119.t:0 "Liberals Wins Elections"
- ottoman.119.d:0 "After the victory of conservatives in the elections, it seems like they've failed to secure the loyalty of the people and lost their popularity. As a result, the voters have shown their frustration by electing Hürriyet ve İtilaf Fırkası in the elections. Again ruling the nation; everyone wonders if the liberals will correct their past mistakes, or disappoint the population once again."
- ottoman.119.a:0 "Lets hope it ends well."
- TUR_lock_said_i_nursi_path:0 "§YLiberal path§! will become reavailable.\n§RConservative path will become inaccessible.§!"
  ottoman.120.t:0 "Sects Mobilize"
  ottoman.120.d:0 "With the start of the war, conservative sects supporting our regime has started to send volunteer forces in an effort to aid us in our war effort."
  ottoman.120.a:0 "On arms, brothers!"
