Revert "Merge branch 'master' into Capsicum-frutescens"
This reverts commit 5f2958196006b575d45a1933cee529d11aaf1b1f, reversing
changes made to ffba025b3fff11bd27fab4df115ba5dddb9b1023.

--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -589,7 +589,7 @@
  AUH_czernin_suicide:0 "§YOttokar Czernin§! die"
 
 
- ww1_auh.203.t:0 "[AUH.getLeader] Abdicates"
+ ww1_auh.203.t:0 "[AUH.getName] Abdicates"
  ww1_auh.203.d:0 "Following significant political pressure, the Austro-Hungarian Emperor [AUH.getLeader] was forced to abdicate in favor of Eugene of Austria-Teschen, a much more stable figure in the Austro-Hungarian political landscape. This sudden change of situation is consequent to the Sixtus affair, revealing that [AUH.getLeader] was secretly seeking to make peace with France and the rest of the Entente. The affair having caused a scandal, the emperor had to surrender his crown.\n\nThis exceptional event once again brings the dual monarchy closer to its German brother, once again threatening to make it nothing more than a client state."
  ww1_auh.203.a:0 "At least [AUH.getLeader] tried..."
  ww1_auh.203.b:0 "He was a fool"
@@ -619,21 +619,6 @@
  ww1_auh.209.a:0 "The war will be over soon"
  ww1_auh.209.b:0 "WHAT ?!"
 
- ww1_auh.210.t:0 "Austria Refuses to Deal with Italy"
- ww1_auh.210.d:0 "Austria outlined its negotiating conditions, immediately mentioning the impossibility of making any concessions to Italy. Unfortunately for them, cooperation with the Italian authorities is an absolute prerequisite for any form of peace. As a result, we will not be able to negotiate with [AUH.getLeader]."
- ww1_auh.210.a:0 "Too bad!"
-
- ww1_auh.211.t:0 "Austrian Betrayal"
- ww1_auh.211.d:0 "While we were making historic advances on the front, Austria publicly announced its withdrawal from the conflict, acceding to all of our adversaries' demands. We thus discover that [AUH.getLeader] negotiated for several months in secret behind our backs, without telling us anything! The German population is disconcerted and demoralized by the loss of our main ally. From now on, our adversaries will redirect their efforts on us. How to achieve victory now?!"
- ww1_auh.211.a:0 "[AUH.getLeader] !!!!!!!!!"
-
- ww1_auh.212.t:0 "Nationwide Independist movements"
- ww1_auh.212.d:0 "Despite the peace we signed with the Entente, the situation within the empire remains precarious. With the end of fighting and the recovery of the civilian economy, many soldiers found themselves unemployed or disabled. The cessation of the war industry also increased unemployment, as much as the repayment of loans granted to businesses. This situation only aggravates the numerous independence movements, particularly in Slovakia, Bohemia and Yugoslavia."
- ww1_auh.212.a:0 "We must Federalize right now !"
-
- ww1_auh.213.t:0 "Weak National Production"
- ww1_auh.213.d:0 "With the end of the fighting, the military industry collapsed, as did the civilian industry which had focused on the national effort. Without external help, our factories no longer find buyers and must repay immense loans causing chain bankruptcies throughout the empire."
- ww1_auh.213.a:0 "Arfff..."
 
  ww1_auh.17.t:0 "Karl I abdicates the throne"
  ww1_auh.17.d:0 "Karl I has announced the abdication of his Austrian and Hungarian thrones. This is the final nail in the coffin for the Habsburg Empire, now completely dead and buried as a result of the Great War. With the monarchy gone for good, the Austrian parliament in Vienna has taken the initiative and established the Republic of German-Austria, a rump state that is all that's left of the carcass of the Austro-Hungarian Empire. The Republic of German-Austria seeks to unite with Germany, but this is likely impossible due to the Entente's involvement. Habsburg rule is a thing of the past, and marks the end of an era."
@@ -10533,7 +10518,7 @@ AUH_handle_federalism:0 "If the reform pass, it will §Ycore all of the constitu
  ww1_auh.126.a:0 "This could be their last mistake!"
 
  ww1_auh.127.t:0 "Emperor Karl's Wedding"
- ww1_auh.127.t_alt:0 "Archduke Karl's Wedding"
+ ww1_auh.127.t:0 "Archduke Karl's Wedding"
  ww1_auh.127.d:0 "Karl, has just married Zita de Bourbon-Parma, daughter of the Duke of Parma. The wedding took place in Austria in the presence of Franz Joseph who is very enthusiastic. Unlike Karl, Ferdinand asked for a morganic marriage which theoretically excluded him from the succession."
  ww1_auh.127.a:0 "May God bless us all!"
  AUH_ferdinand_is_very_happy:0 "is now Very Happy!"
