--- a/localisation/english/state_names_l_english.yml
+++ b/localisation/english/state_names_l_english.yml
@@ -1009,6 +1009,7 @@
  STATE_1007:0 "North Bukovina"
  STATE_1008:0 "Travancore"
  STATE_1009:0 "Berar"
+ STATE_1010:0 "Krainer Schneeberg"
 
  YODONG_STATE:0 "Yodong"
  SEOGANDO_STATE:0 "Seogando"
@@ -1184,4 +1185,5 @@
  GANJA_STATE:0 "Ganja"
  CITY_OF_ZADAR_STATE:0 "Grad Zadar"
  VATICAN_CITY_STATE:0 "Civitatis Vaticanae"
-
+ SNEZNIK_STATE:0 "Snežnik"
+ MONTE_NEVOSO_STATE:0 "Monte Nevoso"
