--- a/localisation/english/state_names_l_english.yml
+++ b/localisation/english/state_names_l_english.yml
@@ -1187,3 +1187,4 @@
  VATICAN_CITY_STATE:0 "Civitatis Vaticanae"
  SNEZNIK_STATE:0 "Snežnik"
  MONTE_NEVOSO_STATE:0 "Monte Nevoso"
+ ISLAS_MALVINAS_STATE:0 "Islas Malvinas"
