--- a/localisation/english/ww1_ideas_l_english.yml
+++ b/localisation/english/ww1_ideas_l_english.yml
@@ -18,6 +18,7 @@
  OTTOMAN_UNITED_RULE_TOOLTIP:0 "§Y[TUR.GetName]§! can't release its §YSubject States§!!"
  ROM_CARPATHIANS_RULE_TOOLTIP:0 "Can't realase countries in §Ythe Carpathians§!!"
  HUNGARY_UNITED_RULE_TOOLTIP:0 "§Y[HUN.GetName]§! can't release its §Yconstitute states§!!"
+ COLONIESED_RULE_TOOLTIP:0 "§Y[Root.GetName]§! has colonised §Ythe [FROM.GetAdjective] nation§! and can't release colonies."
  Scramble_for_Africa:0 "Scramble for Africa"
  idea_spanish_flu_censor:0 "Influenza Pandemic"
  idea_spanish_flu:0 "Influenza Pandemic"
