sldAJSdlkjskldjslkdjASOkdjnjxmcnkusjdfhe83ye78rtye978rydHYFSIDUhfsdujihf;kljsDHfkjdnflkjdnfKLSDsldAJSdlkjskldjslkdjASOkdjnjxmcnkusjdfhe83ye78rtye978rydHYFSIDUhfsdujihf;kljsDHfkjdnflkjdnfKLSDsldAJSdlkjskldjslkdjASOkdjnjxmcnkusjdfhe83ye78rtye978rydHYFSIDUhfsdujihf;kljsDHfkjdnflkjdnfKLSDsldAJSdlkjskldjslkdjASOkdjnjxmcnkusjdfhe83ye78rtye978rydHYFSIDUhfsdujihf;kljsDHfkjdnflkjdnfKLSDsldAJSdlkjskldjslkdjASOkdjnjxmcnkusjdfhe83ye78rtye978rydHYFSIDUhfsdujihf;kljsDHfkjdnflkjdnfKLSDsldAJSdlkjskldjslkdjASOkdjnjxmcnkusjdfhe83ye78rtye978rydHYFSIDUhfsdujihf;kljsDHfkjdnflkjdnfKLSDsldAJSdlkjskldjslkdjASOkdjnjxmcnkusjdfhe83ye78rtye978rydHYFSIDUhfsdujihf;kljsDHfkjdnflkjdnfKLSDsldAJSdlkjskldjslkdjASOkdjnjxmcnkusjdfhe83ye78rtye978rydHYFSIDUhfsdujihf;kljsDHfkjdnflkjdnfKLSDsldAJSdlkjskldjslkdjASOkdjnjxmcnkusjdfhe83ye78rtye978rydHYFSIDUhfsdujihf;kljsDHfkjdnflkjdnfKLSDsldAJSdlkjskldjslkdjASOkdjnjxmcnkusjdfhe83ye78rtye978rydHYFSIDUhfsdujihf;kljsDHfkjdnflkjdnfKLSDsldAJSdlkjskldjslkdjASOkdjnjxmcnkusjdfhe83ye78rtye978rydHYFSIDUhfsdujihf;kljsDHfkjdnflkjdnfKLSDsldAJSdlkjskldjslkdjASOkdjnjxmcnkusjdfhe83ye78rtye978rydHYFSIDUhfsdujihf;kljsDHfkjdnflkjdnfKLSDsldAJSdlkjskldjslkdjASOkdjnjxmcnkusjdfhe83ye78rtye978rydHYFSIDUhfsdujihf;kljsDHfkjdnflkjdnfKLSDsldAJSdlkjskldjslkdjASOkdjnjxmcnkusjdfhe83ye78rtye978rydHYFSIDUhfsdujihf;kljsDHfkjdnflkjdnfKLSDsldAJSdlkjskldjslkdjASOkdjnjxmcnkusjdfhe83ye78rtye978rydHYFSIDUhfsdujihf;kljsDHfkjdnflkjdnfKLSDsldAJSdlkjskldjslkdjASOkdjnjxmcnkusjdfhe83ye78rtye978rydHYFSIDUhfsdujihf;kljsDHfkjdnflkjdnfKLSDsldAJSdlkjskldjslkdjASOkdjnjxmcnkusjdfhe83ye78rtye978rydHYFSIDUhfsdujihf;kljsDHfkjdnflkjdnfKLSDsldAJSdlkjskldjslkdjASOkdjnjxmcnkusjdfhe83ye78rtye978rydHYFSIDUhfsdujihf;kljsDHfkjdnflkjdnfKLSDsldAJSdlkjskldjslkdjASOkdjnjxmcnkusjdfhe83ye78rtye978rydHYFSIDUhfsdujihf;kljsDHfkjdnflkjdnfKLSDsldAJSdlkjskldjslkdjASOkdjnjxmcnkusjdfhe83ye78rtye978rydHYFSIDUhfsdujihf;kljsDHfkjdnflkjdnfKLSDsldAJSdlkjskldjslkdjASOkdjnjxmcnkusjdfhe83ye78rtye978rydHYFSIDUhfsdujihf;kljsDHfkjdnflkjdnfKLSDsldAJ

--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -1655,7 +1655,7 @@ CHL_el_ideal_modernizador:0 "El Ideal Modernizador"
 CHL_el_ideal_modernizador_desc:0 "We are now about to become an idustrialized country!"
 CHL_saltpeter_auxlio:0 "The Saltpeter Help"
 CHL_saltpeter_auxlio_desc:0 ""
-CHL_laws_against_fraud:0 "Laws Against Electoral Fraud"
+CHL_laws_against_fraud:0 "The [GetYear] General Law Of Elections"
 CHL_laws_against_fraud_desc:0 ""
 CHL_islon_toledo:0 "Islon-Toledo Railway"
 CHL_islon_toledo_desc:0 ""
@@ -1817,7 +1817,7 @@ CHL_military_advisors:0 "Military Advisors"
 CHL_military_advisors_desc:0 "Thanks To The New Prestige We'Ve Gained With The Prussianization Of Our Army And The Victory Over Bolivia And Peru In The War Of The 79',Some Countries Have Requested Us Military Advisors,It Would Be a Nice Thing To Do To Our Neighbors And To Promote American Unity,Especially So If we Want Our Prussian Ideas To Spread Throughout The Nations Of The Americas"
 CHL_escuela_de_aviacion_militar:0 "School Of Military Aviation"
 CHL_escuela_de_aviacion_militar_desc:0 ""
-CHL_lessons_of_tgw:0 "Lessons Of The Great War"
+CHL_lessons_of_tgw:0 "War Studies"
 CHL_lessons_of_tgw_desc:0 ""
 CHL_end_the_sin_escuela:0 "Deal With The Unexperienced Officers"
 CHL_end_the_sin_escuela_desc:0 ""
@@ -1926,10 +1926,12 @@ CHL_makeacensus:0 "Conduct A Census"
 CHL_makeacensus_desc:0 ""
 CHL_foundschools:0 "Found Schools"
 CHL_foundschools_desc:0 ""
-CHL_helplesskids:0 "End The "Huacho" Kids"
+CHL_helplesskids:0 "Laws For Child Protection"
 CHL_helplesskids_desc:0 ""
 CHL_permanent_juntas:0 "Permanent Juntas"
 CHL_permanent_juntas_desc:0 ""
+CHL_decreto_yanes:0 "The Yañez Decree"
+CHL_decreto_yanes_desc:0 ""
 CHL_enacar:0 "Create Enacar"
 CHL_enacar_desc:0 ""
 CHL_endstrikes:0 "End Strikes"
@@ -1980,6 +1982,8 @@ CHL_enforce_neutrality:0 "Enforce Neutrality"
 CHL_enforce_neutrality_desc:0 ""
 CHL_just_in_case:0 "Just In Case"
 CHL_just_in_case_desc:0 ""
+CHL_islationism:0 "Islationaism"
+CHL_islationism_desc:0 ""
 CHL_seize_entente_assets:0 "Seize Entente Assets In Valparaiso"
 CHL_seize_entente_assets_desc:0 ""
 CHL_join_CP:0 "Join The Central Powers"
@@ -2302,6 +2306,15 @@ CHL_the_second_war_of_the_pacific:0 "The Second War Of The Pacific"
 CHL_the_second_war_of_the_pacific_desc:0 ""
 CHL_Accept_our_fate:0 "Accept Our Fate"
 CHL_Accept_our_fate_desc:0 ""
+CHL_census_tt:0 "§YWe Will Conduct a Census!§Y,This will bring more people to the workside, in other words, more manpower"
+CHL_roads_law:0 "Roads Law"
+CHL_roads_law_desc:0 ""
+CHL_civil_procedures_code:0 "Civil Procedures Code"
+CHL_civil_procedures_code_desc:0 ""
+CHL_organic_law_of_tribunals:0 "Organic Law Of Tribunals"
+CHL_organic_law_of_tribunals_desc:0 ""
+CHL_naval_air_force:0 "Naval Aviation"
+CHL_naval_air_force_desc:0 ""
 
  GER_weltpolitik:0 "Weltpolitik"
  GER_weltpolitik_desc:0 "We must enforce our Kaiser's divine right to rule over our Empire. He will lead us and the Empire towards glory!"
