--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -8886,6 +8886,9 @@ agadir_crisis_end:0 "The opportunity to intervene will expire."
 GER_agadir_crisis_opportunity:0 "Agadir Crisis Opportunity Timer"
 
 #Chile
+CHL_sale_saltpeter_FROM:0 "Sell Saltpeter To [FROM.GetNameDef]"
+CHL_saltpeter_on_sale:0 "Saltpeter On Sale"
+CHL_saltpeter_on_sale_desc:0 "Due to the naval blockade Britain imposed on Germany following the failed Schlieffen Plan, Germany has been effectively isolated. This isolation means we've lost our third-largest saltpeter buyer, causing significant strain on our economy. However, this war also presents an opportunity. We can now expand our saltpeter production and sell it to the Entente powers, capitalizing on the increased demand. This shift not only helps mitigate our current economic losses but also offers a chance to thrive and prosper in these challenging times."
 CHL_decision_military_advisers:0 "Military Advisories"
 CHL_decision_military_advisers_desc:0 "Thanks To The New Prestige We'Ve Gained With The Prussianization Of Our Army And The Victory Over Bolivia And Peru In The War Of The 79',Some Countries Have Requested Us Military Advisors,It Would Be a Nice Thing To Do To Our Neighbors And To Promote American Unity,Especially So If we Want Our Prussian Ideas To Spread Throughout The Nations Of The Americas"
 CHL_advisors_FROM:0 "Send Advisors to [FROM.GetName]"
