--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -2396,8 +2396,20 @@ ww1_chile.60.d:0 "In a surprising turn of events, Juan Luis Sanfuentes has been 
 ww1_chile.60.a:0 "please, not another 1891"
  ww1_chile.3.b:0 "A Young, And Modern Perspective Rises In The Moneda Palace"
  ww1_chile.3.c:0 "Oh No, Please Not Another 1891 Again"
-
-
+ww1_chile.61.t:0 "The Results Of The [GetYear] Census"
+ww1_chile.61.d:0 "Since the last census in 1907, Chile's population has experienced a steady increase, growing by 1.2 percent. This gradual rise reflects ongoing demographic trends, including natural population growth and migration patterns. The modest yet consistent growth indicates that Chile continues to develop and expand, contributing to its social and economic evolution over the past century."
+ww1_chile.61.a:0 "nice"
+ww1_chile.63.t:0 "News From Chile"
+ww1_chile.63.d:0 "In the midst of the Great War, we have received an intriguing proposition from Chile. They are offering their abundant saltpeter reserves to aid our war efforts. This offer comes at a crucial time, as saltpeter is indispensable for producing munitions and fertilizers. With Germany isolated due to the British naval blockade, Chile's proposal provides us with a reliable alternative source. Embracing this opportunity could significantly bolster our supply chains and enhance our military capabilities. By accepting Chile's offer, we stand to gain not only in terms of resources but also by forging a valuable economic partnership during these turbulent time."
+ww1_chile.63.a:0 "Sure, The Extra Saltpeter Will Help"
+ww1_chile.63.b:0 "Hell naw bro"
+ww1_chile.64.t:0 "They've Accepted"
+ww1_chile.64.d:0 "Chile is pleased to announce that several nations have accepted our offer of saltpeter, recognizing its critical importance for their war efforts. This development comes at a pivotal moment, affirming our role as a key supplier in this global conflict. By providing this essential resource, we not only support our allies in their time of need but also secure a prosperous future for our own economy. The acceptance of our saltpeter offer marks the beginning of strengthened international partnerships and highlights Chile's strategic significance on the world stage during these challenging times."
+ww1_chile.64.a:0 "Very Well, Its Our Turn Now,Let's Get Working"
+ww1_chile.65.t:0 "They've Rejected Our Offer"
+ww1_chile.65.d:0 "
+Chile regrets to inform that several nations have declined our offer of saltpeter. Despite the critical importance of this resource for their war efforts, they have chosen alternative suppliers. This decision presents a significant setback for our economy, which heavily relies on saltpeter exports. However, we remain resilient and are committed to finding new markets and opportunities to ensure our economic stability. This rejection underscores the challenges we face but also motivates us to diversify and strengthen our economic foundations for the future."
+ww1_chile.65.a:0 "Well-."
 
 
 
