--- a/localisation/english/ww1_ideas_l_english.yml
+++ b/localisation/english/ww1_ideas_l_english.yml
@@ -2761,6 +2761,11 @@ ARG_italian_inmigration_desc:0 "Italian Inmigrants have begun running from chile
 CHL_idea_strait_blockade:0 "Blockade On Peru"
 CHL_veteran_circles_idea:0 "Veteran Circles"
 CHL_national_history_museum:0 "National History Museum"
+CHL_electoral_intervention:0 "Low Electoral Intervention-Democratization Of Society"
+CHL_economic_blow:0 "Economic Blow"
+CHL_economic_blow_desc:0 "The Naval Blockade Imposed on Germany has done its job."
+CHL_saltpeter_produce:0 "Chile Saltpeter Produce"
+CHL_saltpeter_produce_desc:0 "Yummy"
 
  compania_de_lota_y_coronel:0 "Compañía De Lota Y Coronel"
 
