--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -4429,7 +4429,7 @@ kis_news.143.a:0 "Will the revolution spread to Western Europe?"
  ottoman.117.a:0 "A dear Committee member would never do such a thing."
  ottoman.117.b:0 "Perhaps Reşid Bey was right, we better follow his orders."
  ottoman.117.c:0 "No one can deny state authority."
- TUR_ittihadist_autonomy_diyarbakir:0 "(@TUR §YOttoman İzmir§!):\n   Becomes owner and controller of §Y[350.GetName]§!\n   Becomes owner and controller of §Y[829.GetName]§!\n   §YOttoman Diyarbekir§! becomes §YAutonomous Vilayet§! of §Y[TUR.GetName]§!   Politics will change\n   §YİTF§! becomes the ruling party.\n   Public elections will not be held.\n   §YMehmed Reşid Bey§!(@TUR) joins §YOttoman Governate of Diyarbekir§!\n   §YMehmed Reşid Bey§! becomes leader for the authoritarian party.\n\n"
+ TUR_ittihadist_autonomy_diyarbakir:0 "(@TUR §YOttoman İzmir§!):\n   Becomes owner and controller of §Y[350.GetName]§!\n   Becomes owner and controller of §Y[829.GetName]§!\n   Becomes owner and controller of §Y[884.GetName]§!\n   §YOttoman Diyarbekir§! becomes §YAutonomous Vilayet§! of §Y[TUR.GetName]§!   Politics will change\n   §YİTF§! becomes the ruling party.\n   Public elections will not be held.\n   §YMehmed Reşid Bey§!(@TUR) joins §YOttoman Governate of Diyarbekir§!\n   §YMehmed Reşid Bey§! becomes leader for the authoritarian party.\n\n"
 
  ottoman.120.t:0 "Sects Mobilize"
  ottoman.120.d:0 "With the start of the war, conservative sects supporting our regime has started to send volunteer forces in an effort to aid us in our war effort."
