--- a/localisation/english/ww1_traits_l_english.yml
+++ b/localisation/english/ww1_traits_l_english.yml
@@ -434,6 +434,7 @@
  grandfather_of_the_russian_revolution:0 "Grandfather of the Russian Revolution"
  airship_manufacturer:0 "Airship Manufacturer"
  TUR_ittihadist_ideologue:0 "İttihadist Ideologue"
+ TUR_democratic_ideologue:0 "Democratic Ideologue"
  siberian_machiavelli:0 "Siberian Machiavelli"
  dealbreaker:0 "Dealbreaker"
  fra_homme_de_la_defaite:0 "Homme de la Défaite"
