Tweak Italian civil war

--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -9690,6 +9690,13 @@ kis_news.143.a:0 "Will the revolution spread to Western Europe?"
  garibaldi.33.t:0 "Italy Fractures"
  garibaldi.33.d:0 "A fratricidal warfare among the Italians on the ruins of former Italian Kingdom of the House of Savoy has screened an unexpected death. The civil war ceased in Italy, with socialists in the north and reactionaries in the south having an armed confrontation against each other establishing their respective regimes.\nToday, less than a hundred years after the birth of a unified Italy, Italy is completely fractured again. No one knows if Italy will ever be able to reunite. Perhaps in a few decades someone brave and stark will regain the Italians' aspirations, with blood on his hands."
  garibaldi.33.a:0 "So long Italy."
+ garibaldi.34.t:0 "Question of San Marino"
+ garibaldi.34.d:0 "San Marino is a small sovereign state in the Italian interior. But since the cause of socialism calls for the unity of the Italian people, San Marino must also take the line of the people and the workers."
+ garibaldi.34.a:0 "Tell them: Listen to the will of the people!"
+ garibaldi.35.t:0 "Socialists Pressure"
+ garibaldi.35.d:0 "The socialists who have taken control of northern Italy have demanded that we follow the cause of socialism and bring a socialist party to power. Ignoring it will result in violence."
+ garibaldi.35.a:0 "Hold an early election."
+ garibaldi.35.b:0 "It's a violation of sovereignty!"
 
  # LUXEMBOURG
  ww1_luxembourg.1.a:0 "Good luck to her."
