some chile loc and loc fixes

--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -1633,10 +1633,11 @@
  FNG_focus_finish_unloyal_warlords:0 "Finish Unloyal Warlords"
  FNG_focus_finish_unloyal_warlords_desc:0 ""All your China are belong to us.""
 
+### Chile
 CHL_a_century_of_poverty:0 "A Century Of Poverty"
-CHL_a_century_of_poverty_desc:0 ""
+CHL_a_century_of_poverty_desc:0 "A century of our independence has passed, but there's nothing to celebrate. For these 100 years, the people and the nation have suffered, with much poverty. This must change, and to bring change the current government must be replaced with a new one!"
 CHL_denounce_the_oligarchy:0 "Denounce The Ungovernment"
-CHL_denounce_the_oligarchy_desc:0 """
+CHL_denounce_the_oligarchy_desc:0 "The current government of our country, has done little to raise the Chilean people from poverty and their suffering. They aren't really a government at all due to their lack of effort on the issues, and they must be replaced by an actual, competent, government."
 CHL_deal_with_the_aristocracy:0 "A Secret Pact"
 CHL_deal_with_the_aristocracy_desc:0 ""
 CHL_infiltrtate_the_army:0 "Infiltrate The Army"
@@ -1664,7 +1665,7 @@ CHL_territorial_integration_project_desc:0 "if we wanna be better, we shall buil
 CHL_merge_post_and_telegraph_system:0 "Merge Post And Telegraph Companies"
 CHL_merge_post_and_telegraph_system_desc:0 "gotta make messages get from place to place fast, whatsapp aint a thing yet"
 CHL_expand_railways:0 "Expand Railways"
-CHL_expand_railways_desc:0 "if we wanna be better, we shall build railways all over the country, this time we are actually doing it tho"
+CHL_expand_railways_desc:0 "To improve the country's connections, we will expand our railways which are currently lacking across the nation. This will be expensive, but will greatly benefit our nation."
 CHL_to_the_south:0 "To The South"
 CHL_to_the_south_desc:0 "well build railways in the south"
 CHL_angol_traiguen:0 "Angol-Traiguen Railway"
@@ -1755,7 +1756,8 @@ CHL_reconstruccion_of_sewage_system_desc:0 ""
 CHL_sa_dreadnought_race:0 "South American Dreadnought Race"
 CHL_sa_dreadnought_race_desc:0 "the South American Dreadnought Race is on, both brazil and argentina are rearming their navies, however, they dont have something we do, very good relations with the british, we should take advantage of that "
 CHL_plan_del_centenario:0 "Plan Del Centenario"
-CHL_plan_del_centenario_desc:0 "§YOur Centenario Plan is of the utmost importance if we are to win this dreadnought naval race. In order to fulfill it, we must purchase a dreadnought from our friends across the world, the British. If our purchase is approved we’ll have one of the most powerful navies in the world.Y"
+CHL_plan_del_centenario_desc:0 ""
+CHL_plan_del_centenario.tt:0 "\nOur §YCentenario Plan§! is of the utmost importance if we are to win this dreadnought naval race. In order to fulfill it, §Ywe must purchase a dreadnought§! from our friends across the world, the British. If our purchase is approved we’ll have §Yone of the most powerful navies§! in the world."
 CHL_naval_museum:0 "Found The Naval Museum"
 CHL_naval_museum_desc:0 "we'll stop this shitty thing called ignorance"
 CHL_construct_the_molo_de_abrigo:0 "Construct The Molo De Abrigo"
@@ -1800,11 +1802,11 @@ CHL_reconstruccion_of_tranway_system_desc:0 ""
 CHL_reconstruccion_of_churchesx:0 "Reconstruct Churches"
 CHL_reconstruccion_of_churchesx_desc:0 ""
 CHL_reform_the_promotion_system:0 "Reform The Promotion System"
-CHL_reform_the_promotion_system_desc:0 "fuckers get promoted only because of nepotism, lets put an end to it"
+CHL_reform_the_promotion_system_desc:0 "The promotion system in our country is broken and many are promoted through nepotism. As a step to keep on reforming our army, we will put an end to this nepotism."
 CHL_german_rifles:0 "Mauser 1895 Of Chilean Model"
-CHL_german_rifles_desc:0 "we ordered 75k units of the german rifle mauser 1895"
+CHL_german_rifles_desc:0 "During our arms race with Argentina in 1896-1898, we purchased a lot of rifles, specifically the Mauser 1895 from Germany. To continue arming our military, we should purchase more of these rifles used by the greatest military power, Germany which will surely make our military strong too."
 CHL_ley_four_thousand_fourtythree:0 "Law 4.043"
-CHL_ley_four_thousand_fourtythree_desc:0 "expand famae to make them able to mantain these little boys"
+CHL_ley_four_thousand_fourtythree_desc:0 "We can't just rely on foreign arms, but we also can't rely on our very small domestic production. We must increase our domestic arms manufacturing, and to do that, we will turn to FAMAE, our state owned arms manufacturer, to expand its production and make all kinds of machinery."
 CHL_armeros_school:0 "Gunsmiths School"
 CHL_armeros_school_desc:0 "make those mills output go up!"
 CHL_igm:0 "Geographical Military Institute"
@@ -1814,7 +1816,7 @@ CHL_send_officers_to_germany_desc:0 ""
 CHL_consolidate_prussianism:0 "Consolidate Prussianism"
 CHL_consolidate_prussianism_desc:0 ""
 CHL_military_advisors:0 "Military Advisors"
-CHL_military_advisors_desc:0 "Thanks To The New Prestige We'Ve Gained With The Prussianization Of Our Army And The Victory Over Bolivia And Peru In The War Of The 79',Some Countries Have Requested Us Military Advisors,It Would Be a Nice Thing To Do To Our Neighbors And To Promote American Unity,Especially So If we Want Our Prussian Ideas To Spread Throughout The Nations Of The Americas"
+CHL_military_advisors_desc:0 "Thanks to the new prestige we've gained with the Prussianization of our army and the victory over Bolivia and Peru in the War of the Pacific, some countries have requested our military advisors, it would ne a nice thing to help our neighbors and to promote American unity, especially so if we want our Prussian ideas to spread throughout the nations of the Americas."
 CHL_escuela_de_aviacion_militar:0 "School Of Military Aviation"
 CHL_escuela_de_aviacion_militar_desc:0 ""
 CHL_lessons_of_tgw:0 "War Studies"
@@ -2287,8 +2289,8 @@ the_great_war_has_started:0 "The Great War Has Started"
 CHL_manpiulate_the_army_tooltip:0 "§ If The Army Ever Tries To Rebel, They Wont Be Able To §"
 great_war_protests_flag:0 "Protests Have Erupted Because Of The Great War."
 CHL_recall_old_officers:0 "Recall Old Officers"
-CHL_state_ateismo_tt:0 "§YCareful§Y.§Yyou§Y §Ymight§Y §Yget blacklash§Y §Yfrom§Y §Ythe§Y §YCatholic§Y §9Unions!§Y"
-CHL_fiscalrailways_tt:0 "§YFor this focus yo yake effect you must have asigned the Empresa De Ferrocarriles Del Estado as your Industrial Concern§Y"
+CHL_state_ateismo_tt:0 "Careful, you might get §Yblacklash§! from the Catholic §9Unions!§!"
+CHL_fiscalrailways_tt:0 "§YFor this focus yo yake effect you must have asigned the Empresa De Ferrocarriles Del Estado as your Industrial Concern§!"
 expelling:0 "Expelling A Kind Of "People""
 CHL_they_ve_taken_them_back:0 "They've Taken Them Back"
 CHL_they_ve_taken_them_back_desc:0 ""
