--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -2319,9 +2319,9 @@ HOI4TGW_transandininan_railway:0 "Opening Of The TransAndinian Railway"
 ww1_chile.36.t:0 "Nationalist Protests!"
 ww1_chile.36.d:0 "fuckers from germany and england are holding protests in valparaiso of over 100k people, we must put and end to this,either by declaring our neutrality,or joining a side of the war, its really difficult tho, the government of [CHL.GetLeader] has held a security council meeting on the matters of the war, and they've recommended our government to stay neutral and take advantage of the war by selling saltpeter to the fighting sides, however, its clear how much our germophile army loves germany and the kaiser, and would obviously love to help them in the war "
 ww1_chile.36.a:0 "We'll See..."
-ww1_chile.37.t:0 "Our President Pedro Montt Montt Leaves for argentina"
-ww1_chile.37.d:0 "Our President Pedro Montt Montt Leaves for argentina, he'll be leaving for 11 days, leaving Ismael Tocornal In charge, we hope his health stays good and has a good time in their own century of independence celebrations"
-ww1_chile.37.a:0 "he aint gonna die...right?"
+ww1_chile.37.t:0 "Our President Pedro Montt Montt Leaves for Argentina"
+ww1_chile.37.d:0 "Our President Pedro Montt Montt Leaves for Argentina, he'll be leaving for 11 days, leaving Ismael Tocornal In charge, we hope his health stays good and has a good time in their own century of independence celebrations."
+ww1_chile.37.a:0 "He isn't gonna die...right?"
 ww1_chile.38.t:0 "Pedro Montt has returned"
 ww1_chile.38.d:0 "he's returned from argentina, hurray!"
 ww1_chile.38.a:0 "oh, bro... what a relief, he didnt die"
@@ -2407,8 +2407,7 @@ ww1_chile.64.t:0 "They've Accepted"
 ww1_chile.64.d:0 "Chile is pleased to announce that several nations have accepted our offer of saltpeter, recognizing its critical importance for their war efforts. This development comes at a pivotal moment, affirming our role as a key supplier in this global conflict. By providing this essential resource, we not only support our allies in their time of need but also secure a prosperous future for our own economy. The acceptance of our saltpeter offer marks the beginning of strengthened international partnerships and highlights Chile's strategic significance on the world stage during these challenging times."
 ww1_chile.64.a:0 "Very Well, Its Our Turn Now,Let's Get Working"
 ww1_chile.65.t:0 "They've Rejected Our Offer"
-ww1_chile.65.d:0 "
-Chile regrets to inform that several nations have declined our offer of saltpeter. Despite the critical importance of this resource for their war efforts, they have chosen alternative suppliers. This decision presents a significant setback for our economy, which heavily relies on saltpeter exports. However, we remain resilient and are committed to finding new markets and opportunities to ensure our economic stability. This rejection underscores the challenges we face but also motivates us to diversify and strengthen our economic foundations for the future."
+ww1_chile.65.d:0 "Chile regrets to inform that several nations have declined our offer of saltpeter. Despite the critical importance of this resource for their war efforts, they have chosen alternative suppliers. This decision presents a significant setback for our economy, which heavily relies on saltpeter exports. However, we remain resilient and are committed to finding new markets and opportunities to ensure our economic stability. This rejection underscores the challenges we face but also motivates us to diversify and strengthen our economic foundations for the future."
 ww1_chile.65.a:0 "Well-."
 
 
