--- a/localisation/english/ww1_research_l_english.yml
+++ b/localisation/english/ww1_research_l_english.yml
@@ -61,6 +61,13 @@
  electrical_engineering_desc:0 "Using invisible electrons which are almost everywhere, we can create a variety of electric device and equipment that goes beyond just physical operation."
  mechanical_engineering:0 "Combustion Engine"
  mechanical_engineering_desc:0 "A high temperature and pressure gas produced by combusting fuel and oxidizer forces mechanical devices of engine such as pistons to be pushed out. It's about converting this energy into momentum."
+ magneto_ignition:0 "Magneto Ignition"
+ magneto_ignition_desc:0 "An ignition magneto, also called a high-tension magneto, is an older type of ignition system used in spark-ignition engines such as petrol engines. It uses a magneto and a transformer to make pulses of high voltage for the spark plugs."
+ coil_ignition:0 "Coil Ignition"
+ coil_ignition_desc:0 "A trembler coil, buzz coil or vibrator coil is a type of high-voltage ignition coil used in the ignition system of early automobiles, most notably the Benz Patent-Motorwagen and the Ford Model T, produced from 1909"
+ distributor_based_ignition:0 "Distributor-based Ignition"
+ distributor_based_ignition_desc:0 "An improved ignition system was invented by Charles Kettering at Delco in the United States and introduced in Cadillac's cars. The Kettering ignition system consisted of a single ignition coil, breaker points, a capacitor (to prevent the points from arcing at break) and a distributor, to direct the electricity from the ignition coil to the correct cylinder."
+
  chemical_research:0 "Chemical Research"
  chemical_research_desc:0 "There are countless elements in our world, unlike what ancient people used to think of as only water, fire, air, and soil are everything in the world. And if we learn how to handle these things, we can create a huge number of compounds. And there are endless possibilities here."
  aircraft_engine:0 "Aircraft Engine"
