--- a/localisation/english/replace/replace_research_l_english.yml
+++ b/localisation/english/replace/replace_research_l_english.yml
@@ -436,6 +436,8 @@
  oil_plant_desc:0 "A network of factories for synthetic distillation and refining of oil products is the next step towards ensuring the fuel supply for our nation."
  improved_oil_plant:0 "Improved Oil Plant"
  improved_oil_plant_desc:0 "Moving previously experimental methods for distillation to large-scale operations will allow us to adapt better to available materials and needs."
+ haber_process:0 "Haber Process"
+ haber_process_desc:0 "The Haber process is the main industrial procedure for the production of ammonia."
  advanced_oil_plant:0 "Advanced Oil Plant"
  advanced_oil_plant_desc:0 "New experimental purification techniques like hydrotreating can be used in oil manufacturing to greatly improve the final product."
  construction1:0 "Construction I"
@@ -450,6 +452,8 @@
  construction5_desc:0 "The future of efficient construction will require more extensive planning for individual projects as well as standardized solutions wherever possible."
  excavation1:0 "Excavation I"
  excavation1_desc:0 "Advancement in drilling techniques allows us to excavate resources that were impossible to reach earlier."
+ stainless_steel:0 "Stainless Steel"
+ stainless_steel_desc:0 "Stainless steel, also known as inox, corrosion-resistant steel and rustless steel, is an alloy of iron that is resistant to rusting and corrosion. It contains iron with chromium and other elements such as molybdenum, carbon, nickel and nitrogen depending on its specific use and cost."
  excavation2:0 "Excavation II"
  excavation2_desc:0 "New techniques help us collect resources more efficiently. We no longer taint the resources upon extraction, leading to a greater yield."
  excavation3:0 "Excavation III"
