--- a/localisation/english/ww1_ideas_l_english.yml
+++ b/localisation/english/ww1_ideas_l_english.yml
@@ -2696,12 +2696,12 @@ VIN_administration_indigene_desc:0 "Part of the indigenous elites are now member
  CHL_plan_del_centenario_Idea_desc:0 "we gotta make that navy big"
  CHL_molo_de_abrigo:0 "Valparaiso-Molo De Abrigo"
  CHL_molo_de_abrigo_desc:0 "valparaiso is finally protected"
- CHL_FAMAE:0 "FAMAE"
- CHL_FAMAE_desc:0 "FAMAE (Fábricas y Maestranzas del Ejército, "Factories and Workshops of the Army") is a Chilean state-owned firearms manufacturer. Its products are used by the Chilean army."
- CHL_FAMAE_Artillery:0 "FAMAE-Artillery"
- CHL_FAMAE_Artillery_desc:0 "FAMAE (Fábricas y Maestranzas del Ejército, "Factories and Workshops of the Army") is a Chilean state-owned firearms manufacturer. Its products are used by the Chilean army."
+ CHL_FAMAE:0 "Fábrica de Armas de la Nación."
+ CHL_FAMAE_desc:0 "Fábrica de Armas de la Nación is a Chilean state-owned firearms manufacturer. Its products are used by the Chilean army."
+ CHL_FAMAE_Artillery:0 "Fábrica de Armas de la Nación-Artillery"
+ CHL_FAMAE_Artillery_desc:0 "Fábrica de Armas de la Nación is a Chilean state-owned firearms manufacturer. Its products are used by the Chilean army."
  CHL_ASMAR:0 "Arsenales De Marina"
- CHL_ASMAR_desc:0 "ASMAR (Astilleros y Maestranzas de la Armada de Chile) is a Chilean state-owned shipbuilding company,  was established in 1895"
+ CHL_ASMAR_desc:0 "Arsenales De Marina is a Chilean state-owned shipbuilding company,  was established in 1895"
  CHL_FORD:0 "Ford Chile"
  CHL_Ellington_and_co:"Ellington And Co"
  sopwith_aviation_co_CHILE:0 "Sopwith Aviation Co"
