--- a/localisation/english/ww1_characters_l_english.yml
+++ b/localisation/english/ww1_characters_l_english.yml
@@ -706,7 +706,7 @@
  CHL_luis_barros_borgono:0 "Luis Barros Borgoño"
  CHL_luis_aldunate_echeverria:0 "Luis Aldunate Echeverría"
  CHL_jorge_matte_gormaz:0 "Jorge Matte Gormaz"
-CHL_guillermo_subercauseaux:0 "Guillermo Subercauseaux Vicuña"
+CHL_guillermo_subercauseaux:0 "Guillermo Subercauseaux Perez"
  CHL_jorge_boonen:0 "Jorge Boonen Rivera"
 CHL_aristides_pinto_concha:0 "Arístides Pinto Concha"
 CHL_Roberto_Silva_Renard:0 "Roberto Silva Renard"
